--- a/src/sass/components/_typing.scss
+++ b/src/sass/components/_typing.scss
@@ -1,10 +1,12 @@
 .typing {
-    span {
-        overflow: hidden;
-        border-right: .15em solid var(--link-color);
-        white-space: nowrap;
-        letter-spacing: .15em;
-        animation: typing 1s steps(20, end), blink-caret 1s step-end infinite;
+    &::after {
+        content: '█';
+    }
+}
+
+.blink {
+    &::after {
+        animation: blink-caret 1000ms step-end infinite;
     }
 }
 
@@ -19,9 +21,9 @@
 
 @keyframes blink-caret {
     from, to {
-        border-color: transparent;
+        color: transparent;
     }
     50% {
-        border-color: var(--link-color);
+        color: var(--link-color);
     }
 }
